<resources>
    <string name="app_name">IGexperiments</string>
    <string name="version">v4.0</string>
    <string name="instagram_logo" translatable="false">Instagram Logo</string>

    <string name="module_status">Module Status:</string>
    <string name="module_status_disabled">Module Disabled</string>
    <string name="request_enable_module">Please enable the module in Xposed Installer.</string>
    <string name="module_disabled">Please enable the module to use features.</string>
    <string name="module_status_enabled_no_root">Module Status: Enabled (No Root Access)</string>
    <string name="request_enable_root">Root access is required for auto-restart. Manual restart required.</string>
    <string name="module_status_enabled">Module Status: Enabled</string>
    <string name="module_active">The module is active and working.</string>

    <string name="checking_instagram">Checking Instagram</string>
    <string name="restart_instagram">Restart Instagram</string>
    <string name="installed_instagram_version">Instagram Installed - Version: </string>
    <string name="not_installed_instagram">Instagram is not installed.</string>
    <string name="error_instagram">Error checking Instagram status.</string>

    <string name="contributors">Contributors</string>
    <string name="contributor_name">Contributor Name</string>

    <!-- Toast -->
    <string name="restart_insta_toast">Restarting Instagram</string>
    <string name="failed_restart_insta_toast">Failed to restart Instagram</string>
    <string name="non_root_restart_insta_toast">Please force stop Instagram and open it</string>

</resources>
